--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p class="mt-2 text-sm font-semibold">Health Potion</p>
                     </div>
                     <div class="item-card potion-card aspect-square bg-gray-800/50 p-3 rounded-lg border-2 border-gray-600 flex flex-col justify-center items-center cursor-pointer transition-all duration-200" data-item-name="Mana Potion">
-                        <img src="https://placehold.co/150x150/1e3a8a/bfdbfe?text=Mana" alt="Mana Potion" class="h-20 w-20 object-contain drop-shadow-lg">
+                        <img src="https://raw.githubusercontent.com/nycReaching/games/refs/heads/main/bluepotion.png" alt="Mana Potion" class="h-20 w-20 object-contain drop-shadow-lg">
                         <p class="mt-2 text-sm font-semibold">Mana Potion</p>
                     </div>
                      <div class="item-card potion-card aspect-square bg-gray-800/50 p-3 rounded-lg border-2 border-gray-600 flex flex-col justify-center items-center cursor-pointer transition-all duration-200" data-item-name="Stamina Potion">
@@ -172,3 +172,4 @@
 
 </body>
 </html>
+
