--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       - flex/flex-col: Stacks the top, middle, and bottom sections vertically.
       - rounded-xl: Gives the container soft, modern corners.
     -->
-    <div id="game-container" class="w-full max-w-md h-screen max-h-[900px] bg-gray-800 rounded-xl shadow-2xl flex flex-col overflow-hidden border-4 border-gray-700">
+    <div id="game-container" class="w-full max-w-md h-[95vh] max-h-[900px] bg-gray-800 rounded-xl shadow-2xl flex flex-col overflow-hidden border-4 border-gray-700">
 
         <!-- Top Section: Header / Player Stats -->
         <header id="top-section" class="bg-gray-900/50 p-3 sm:p-4 border-b-4 border-gray-700 shadow-lg z-10">
@@ -130,3 +130,4 @@
 
 </body>
 </html>
+
